<resources>
    <string name="app_name">SimpleRecipes</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="no_results_found">No results found</string>
    <string name="search_bar_hint">Let\'s find new recipes</string>
    <string name="settings">Settings</string>
    <string name="recipes_not_found">Recipes not found</string>
    <string name="you_havn_t_add_any_recipes_yet">You havn\'t add any recipes yet</string>
    <string name="no_fav_hint">Use the button Search on the bottom panel to find the recipes you need</string>
    <string name="to_add_a_recipe_click">To add a recipe click</string>
    <string name="menu_ideas">Menu Ideas</string>
    <string name="cook_today">Cook today</string>
    <string name="error_title">Check Internet connection</string>
    <string name="breakfast">Breakfast</string>
    <string name="ingredients">Ingredients:</string>
    <string name="preparation_title">Preparation</string>
    <string name="unknown">Unknown</string>
    <string name="minutes_label">%1$d min</string>
    <string name="by_source">by %1$s</string>
    <string name="retry">retry</string>
    <string name="quotes">Make your own food, and <font color='#f18d46'> #stayAtHome!</font></string>
    <string name="how_to_cook">How to cook:</string>
    <string name="hello_food_lovers">Hello, Food lovers!</string>
    <string name="categories">Categories</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="delete_from_favorites">Delete from favorites</string>

</resources>