<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigationHome">

    <fragment
        android:id="@+id/navigationHome"
        android:name="com.example.simplerecipes.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigationHome_to_mealFragment"
            app:destination="@id/mealFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigationSearch"
        android:name="com.example.simplerecipes.presentation.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_bar" />

    <fragment
        android:id="@+id/navigationFavourites"
        android:name="com.example.simplerecipes.presentation.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigationSettings"
        android:name="com.example.simplerecipes.presentation.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/mealFragment"
        android:name="com.example.simplerecipes.presentation.ui.meallist.MealListFragment"
        android:label="MealFragment" >
        <action
            android:id="@+id/action_mealFragment_to_navigationHome"
            app:destination="@id/navigationHome" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="com.example.simplerecipes.presentation.ui.detail.RecipeDetailFragment"
        android:label="RecipeDetailFragment" />
</navigation>