<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewEmptyFavorites"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_havn_t_add_any_recipes_yet"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/no_fav_hint"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:gravity="center"
        android:src="@drawable/ic_recipe_book" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_add_a_recipe_click"
        android:textSize="@dimen/large_text_size"
        android:drawablePadding="2dp"
        app:drawableRightCompat="@drawable/ic_like" />


</LinearLayout>