<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@+id/categoriesFragment">

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.simplerecipes.presentation.ui.categories.CategoriesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categoriesFragment_to_categoryDetailFragment"
            app:destination="@id/categoryDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.simplerecipes.presentation.ui.search.SearchFragment"
        android:label="@string/title_search">
        <action
            android:id="@+id/action_searchFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.simplerecipes.presentation.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.simplerecipes.presentation.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/categoryDetailsFragment"
        android:name="com.example.simplerecipes.presentation.ui.meallist.MealListFragment"
        android:label="categoriesDetails">
        <action
            android:id="@+id/action_mealFragment_to_navigationHome"
            app:destination="@id/categoriesFragment" />
        <action
            android:id="@+id/action_categoriesDetailsFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <argument
            android:name="category"
            app:argType="com.example.simplerecipes.domain.entity.CategoryItem" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.simplerecipes.presentation.ui.detail.RecipeDetailFragment"
        android:label="RecipeDetailFragment">
        <argument
            android:name="recipeId"
            app:argType="string" />
    </fragment>

</navigation>