<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/titleTextView"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/small_dimen"
        android:layout_marginEnd="@dimen/small_dimen"
        android:text="@string/title_search" />

    <TextView
        android:id="@+id/tvAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimen"
        android:layout_marginTop="@dimen/small_dimen"
        android:text="@string/quotes"
        android:textSize="@dimen/text_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtRecipeSearchLayout"
        style="@style/fullWidthTextInputLayout"
        android:layout_marginStart="@dimen/small_dimen"
        android:layout_marginEnd="@dimen/small_dimen"
        android:hint="@string/search_bar_hint"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRecipeSearch"
            style="@style/textInputEditText"
            android:imeOptions="actionSearch" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="40dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/errorLayout"
            layout="@layout/view_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            tools:visibility="gone"
         />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:indeterminateProgressStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            tools:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/founded_recipes_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="54dp"
            tools:listitem="@layout/view_recipe"
            tools:visibility="visible" />

    </FrameLayout>

</LinearLayout>

