<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/titleTextView"
            android:layout_width="match_parent"
            android:text="@string/menu_ideas" />

        <HorizontalScrollView
            android:id="@+id/hsViewMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <include
                    android:id="@+id/cvBreakfast"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />

                <include
                    android:id="@+id/cvLunch"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />

                <include
                    android:id="@+id/cvDinner"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />

                <include
                    android:id="@+id/cvSupper"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            style="@style/titleTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/cook_today" />

        <include
            android:id="@+id/cvCookToday"
            layout="@layout/view_favorite_recipe"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_margin="16dp" />

        <TextView
            style="@style/titleTextView"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/categories" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp">

                <include
                    android:id="@+id/cvSalads"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />
                <include
                    android:id="@+id/cvSoups"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />
                <include
                    android:id="@+id/cvMainDishes"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />
                <include
                    android:id="@+id/cvDrinks"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />
                <include
                    android:id="@+id/cvDesserts"
                    layout="@layout/view_favorite_recipe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>

